--- a/index.html
+++ b/index.html
@@ -4,35 +4,52 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Chris Mills" />
+    <meta name="description" content="The MDN Web Docs Learning Area aims to provide
+            complete beginners to the Web with all they need to know to get
+            started with developing web sites and applications." />
     <link href="styles/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link rel="icon"
+        href="https://roy-tian.github.io/learning-area/extras/getting-started-web/beginner-html-site/images/firefox-icon.png"
+        type="image/png">
 
-    <title>My test page</title>
+    <title>测试页面</title>
 </head>
 
-<button>切换用户</button>
 <script src="scripts/main.js" defer></script>
 
 <body>
     <h1>Mozilla is cool</h1>
-    <img src="images/派蒙.jpg" alt="The Firefox logo: a flaming fox surrounding the Earth." class="my-image">
-
-    <p>At Mozilla, we’re a global community of</p>
-
-    <ul><!-- changed to list in the tutorial -->
-        <li>technologists</li>
-        <li>thinkers</li>
-        <li>builders</li>
+    <img src="images/派蒙.jpg" alt="The Firefox logo: a flaming fox surrounding the Earth." class="my-image" />
+    <h1> </h1>
+    <img src="https://roy-tian.github.io/learning-area/extras/getting-started-web/beginner-html-site/images/firefox-icon.png"
+        alt="Firefox 图标" />
+    <a href=https://www.mozilla.org/ title="The Mozilla homepage">favorite website</a>
+    <!-- 使用 label 元素 -->
+    <label for="input-id">Input Label:</label>
+    <input type="text" id="input-id">
+    <!-- 或者添加 title 属性 -->
+    <input type="text" title="Input Title">
+    <input type="text" title="Input Title" disabled="disabled" />
+    <!-- 或者添加 placeholder 属性 -->
+    <input type="text" placeholder="Input Placeholder">
+    <p>Mozilla 是一个全球社区，这里聚集着来自五湖四海的</p>
+    <ul>
+        <li>技术人员</li>
+        <li>思考者</li>
+        <li>建造者</li>
     </ul>
+    <p>我们致力于让 Internet 保持活力，保持畅通，人人皆可贡献，人人皆可创造。我们坚信：开放平台的协作对于人的发展至关重要，也决定着我们共同的未来。</p>
+    <p>为了达成我们共同的理想，我们遵循一系列的价值观和理念，请参阅 <a href="https://www.mozilla.org/zh-CN/about/manifesto/">Mozilla 宣言</a>。</p>
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and
-        creators of the Web. We believe this act of human collaboration across an open platform is essential to
-        individual
-        growth and our collective future.</p>
+    <button>切换用户</button>
+
+    <p>HTML 中用
+    <p> 来定义段落元素。</p>
+    <p>HTML 中用 &lt;p&gt; 来定义段落元素</p>
 
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
-        to learn even more about the values and principles that guide the pursuit of our mission.</p>
 </body>
 
 </html>
